--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cloud_firestore:
   firebase_core:
   firebase_auth:
+  image_picker: ^0.6.7+7
+  firebase_storage:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
